--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "antd": "^5.15.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
+    "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
@@ -45,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
