--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
